@@ -1468,3 +1468,5 @@ Added -if and -of options to total for binary i/o (following rcalc mold).
 
 Switched default options in rtrace to use Russian roulette.  (Rpict and rvu
 still use biased ray termination.)
+
+Added rtcontrib -r option to recover partial output.
